--- a/src/views/admin-files-main.ejs
+++ b/src/views/admin-files-main.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<%- include('../partials/admin/head'); %>
 	</head>
-	<body>
+	<body class="file-manager">
 		<header id="header"><%- include('../partials/admin/header'); %></header>
 		<div class="float-left">
 			<h3><kbd><%= path %></kbd></h3>
