--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -1,7 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+
 .file-manager {
 	background: #282c34;
+	margin: 10px;
 	border-radius: 10px;
+}
+.editor-title {
+	color: wheat;
+	margin: 5px;
+	font-family: 'Josefin Sans', sans-serif;
+}
+.editor-save-btn {
+	margin: 10px;
+	font-family: 'Josefin Sans', sans-serif;
+}
+.file-manager-name {
+	color: white;
+	text-decoration: none;
+	font-family: 'Space Grotesk', sans-serif;
+}
+#editor-alert {
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 100;
+	height: 500px;
+	width: 80%;
 }
 a {
 	text-decoration: none;
