--- a/src/partials/admin/header.ejs
+++ b/src/partials/admin/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Admin Panel</a>
+		<a class="navbar-brand" href="/admin">Admin Panel</a>
 		<button
 			class="navbar-toggler"
 			type="button"
@@ -18,7 +18,7 @@
 					<a
 						class="nav-link active"
 						aria-current="page"
-						href="#"
+						href="/admin"
 						title="Main"
 						><i class="fa-solid fa-house-chimney fa-xl"></i
 					></a>
@@ -27,13 +27,13 @@
 					<a
 						class="nav-link"
 						aria-current="page"
-						href="#"
+						href="/admin/files"
 						title="File manager"
 						style="color: black"
 						><i class="fa-solid fa-folder fa-xl"></i
 					></a>
 				</li>
-				<li class="nav-item header-icon">
+				<!-- <li class="nav-item header-icon">
 					<a
 						class="nav-link header-icon"
 						aria-current="page"
@@ -51,7 +51,7 @@
 						title="Pages"
 						><i class="fa-solid fa-file fa-xl"></i
 					></a>
-				</li>
+				</li> -->
 			</ul>
 			<ul
 				class="navbar-nav me-auto mb-2 mb-lg-0"
