--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -1,53 +1,47 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  <li class="nav-item dropdown nav-link">
-    <i
-      class="fa-solid fa-shop header-icon fa-xl hover-bounce-animation"
-      href="#"
-      role="button"
-      id="dropdownMenuLink"
-      data-bs-toggle="dropdown"
-      aria-expanded="false"
-    ></i>
+	<li class="nav-item dropdown nav-link">
+		<i
+			class="fa-solid fa-shop header-icon fa-xl hover-bounce-animation"
+			href="#"
+			role="button"
+			id="dropdownMenuLink"
+			data-bs-toggle="dropdown"
+			aria-expanded="false"
+		></i>
 
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      <li><a class="dropdown-item" href="/shop">All</a></li>
-      <li><a class="dropdown-item" href="/shop/models">Models</a></li>
-      <li>
-        <a class="dropdown-item" href="/shop/privilege">Privileges</a>
-      </li>
-    </ul>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/tickets" title="Tickets">
-      <i class="fa-solid fa-ticket header-icon fa-xl hover-bounce-animation"></i
-    ></a>
-  </li>
+		<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+			<li><a class="dropdown-item" href="/shop">All</a></li>
+			<li><a class="dropdown-item" href="/shop/models">Models</a></li>
+			<li>
+				<a class="dropdown-item" href="/shop/privilege">Privileges</a>
+			</li>
+		</ul>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link" href="/tickets" title="Tickets">
+			<i
+				class="fa-solid fa-ticket header-icon fa-xl hover-bounce-animation"
+			></i
+		></a>
+	</li>
 
-  <li class="nav-item">
-    <a class="nav-link" href="/rules" title="Rules">
-      <i
-        class="fa-sharp fa-solid fa-scroll header-icon fa-xl hover-bounce-animation"
-      ></i
-    ></a>
-  </li>
-
-  <li class="nav-item">
-    <a class="nav-link" href="/mapViewer" title="Map Preview">
-      <i class="fa-solid fa-cubes header-icon fa-xl hover-bounce-animation"></i
-    ></a>
-  </li>
-</ul>
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  <li class="nav-item">
-    <div class="d-inline-flex">
-      <div class="d-flex">
-        <div class="form-check form-switch ms-auto mt-3 me-3">
-          <label class="form-check-label ms-3" for="lightSwitch">
-            <i class="fa-solid fa-moon fa-lg" style="margin-left: -10px"></i>
-          </label>
-          <input class="form-check-input" type="checkbox" id="lightSwitch" />
-        </div>
-      </div>
-    </div>
-  </li>
+	<li class="nav-item">
+		<div class="d-inline-flex justify-content-end" style="margin-left: 5em">
+			<div class="d-flex">
+				<div class="form-check form-switch ms-auto mt-3 me-3">
+					<label class="form-check-label ms-3" for="lightSwitch">
+						<i
+							class="fa-solid fa-moon fa-lg"
+							style="margin-left: -10px"
+						></i>
+					</label>
+					<input
+						class="form-check-input"
+						type="checkbox"
+						id="lightSwitch"
+					/>
+				</div>
+			</div>
+		</div>
+	</li>
 </ul>
