--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <%- include('../partials/head'); %>
-  </head>
-  <body class="container bg-slate-200">
-    <header id="header"><%- include('../partials/header'); %></header>
-    <main>
-      <%- include('../partials/main-slides'); %>
-      <br />
-      <%- include('../partials/serverCard'); %>
-    </main>
+	<head>
+		<%- include('../partials/head'); %>
+	</head>
+	<body class="container bg-slate-200">
+		<header id="header"><%- include('../partials/header'); %></header>
 
-    <footer id="footer" class="text-center text-muted">
-      <%- include('../partials/footer'); %>
-    </footer>
-  </body>
+		<main>
+			<%- include('../partials/main-slides'); %>
+			<br />
+			<%- include('../partials/serverCard'); %>
+		</main>
+
+		<footer id="footer" class="text-center text-muted">
+			<%- include('../partials/footer'); %>
+		</footer>
+	</body>
 </html>
