--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -4,7 +4,7 @@
 	<section
 		class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
 	>
-		<div>
+		<!-- <div>
 			<a href="/links/discord" class="me-4">
 				<i
 					class="fa-brands fa-discord fa-lg hover-bounce-animation"
@@ -26,7 +26,7 @@
 			<a href="/links/github" class="me-4">
 				<i class="fa-brands fa-github fa-xl hover-bounce-animation"></i>
 			</a>
-		</div>
+		</div> -->
 
 		<!-- Right -->
 	</section>
