--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,6 +1,5 @@
 <!-- Footer -->
 <footer class="text-center text-lg-start text-muted">
-	<!-- Section: Social media -->
 	<section
 		class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
 	>
@@ -27,24 +26,16 @@
 				<i class="fa-brands fa-github fa-xl hover-bounce-animation"></i>
 			</a>
 		</div> -->
-
-		<!-- Right -->
 	</section>
-	<!-- Section: Social media -->
 
-	<!-- Section: Links  -->
 	<section class="">
 		<div class="container text-center text-md-start mt-5">
-			<!-- Grid row -->
 			<div class="row mt-3">
-				<!-- Grid column -->
 				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-					<!-- Content -->
 					<h6 class="text-uppercase fw-bold mb-4"><%= name %></h6>
 					<p><%= serverDescription %></p>
 				</div>
 
-				<!-- Grid column -->
 				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 					<p>
 						<a href="/shop" class="text-reset">Shop</a>
@@ -53,22 +44,20 @@
 						<a href="/tickets" class="text-reset">Tickets</a>
 					</p>
 				</div>
-				<!-- Grid column -->
 			</div>
-			<!-- Grid row -->
 		</div>
 	</section>
-	<!-- Section: Links  -->
 
-	<!-- Copyright -->
 	<div class="text-center">
 		<h6>
-			© Copyright 2023 ShadowSeek<br />
+			© Copyright 2023 <%= name %><br />
 			Powered by
 		</h6>
-		<a style="text-decoration: none" href="https://github.com/zachey01"
+		<a
+			style="text-decoration: none"
+			href="https://github.com/zachey01/MimiCMS"
+		>
 			>MimiCMS</a
 		>
 	</div>
-	<!-- Copyright -->
 </footer>
