--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -57,7 +57,7 @@
 			style="text-decoration: none"
 			href="https://github.com/zachey01/MimiCMS"
 		>
-			>MimiCMS</a
+			MimiCMS</a
 		>
 	</div>
 </footer>
