--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -45,7 +45,7 @@
 					<ul class="dropdown-menu">
 						<li>
 							<a class="dropdown-item" href="profile"
-								>Профиль <i class="fa-solid fa-user"></i
+								>Profile <i class="fa-solid fa-user"></i
 							></a>
 						</li>
 
@@ -56,7 +56,7 @@
 								class="btn btn-primary"
 								data-bs-toggle="modal"
 								data-bs-target="#exampleModal"
-								>Выйти
+								>Logout
 								<i class="fa-solid fa-right-from-bracket"></i
 							></a>
 						</li>
@@ -89,7 +89,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="exampleModalLabel">
-							Подтверждение
+							Confirmation
 						</h5>
 						<button
 							type="button"
@@ -99,12 +99,12 @@
 						></button>
 					</div>
 					<div class="modal-body">
-						Вы уверены, что хотите выйти из своей учетной записи?
+						Are you sure you want to logout of your account?
 					</div>
 					<div class="modal-footer">
 						<a href="/logout"
 							><button type="button" class="btn btn-secondary">
-								Выйти
+								Logout
 							</button></a
 						>
 						<button
@@ -112,7 +112,7 @@
 							class="btn btn-primary"
 							data-bs-dismiss="modal"
 						>
-							Отмена
+							Cancel
 						</button>
 					</div>
 				</div>
