--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -1,22 +1,12 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-	<li class="nav-item dropdown nav-link">
-		<i
-			class="fa-solid fa-shop header-icon fa-xl hover-bounce-animation"
-			href="#"
-			role="button"
-			id="dropdownMenuLink"
-			data-bs-toggle="dropdown"
-			aria-expanded="false"
-		></i>
-
-		<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-			<li><a class="dropdown-item" href="/shop">All</a></li>
-			<li><a class="dropdown-item" href="/shop/models">Models</a></li>
-			<li>
-				<a class="dropdown-item" href="/shop/privilege">Privileges</a>
-			</li>
-		</ul>
+	<li class="nav-item">
+		<a class="nav-link" href="/shop" title="Shop">
+			<i
+				class="fa-solid fa-shop header-icon fa-xl hover-bounce-animation"
+			></i
+		></a>
 	</li>
+
 	<li class="nav-item">
 		<a class="nav-link" href="/tickets" title="Tickets">
 			<i
