--- a/src/partials/admin/header.ejs
+++ b/src/partials/admin/header.ejs
@@ -33,6 +33,16 @@
 						><i class="fa-solid fa-folder fa-xl"></i
 					></a>
 				</li>
+				<li class="nav-item header-icon">
+					<a
+						class="nav-link"
+						aria-current="page"
+						href="/admin/tickets"
+						title="File manager"
+						style="color: black"
+						><i class="fa-solid fa-message fa-xl"></i
+					></a>
+				</li>
 				<!-- <li class="nav-item header-icon">
 					<a
 						class="nav-link header-icon"
