--- a/src/partials/admin/mainCfg.ejs
+++ b/src/partials/admin/mainCfg.ejs
@@ -57,6 +57,10 @@
 				SteamWebAPIkey: {
 					type: 'string',
 					default: '<%- cfg.SteamWebAPIkey %>'
+				},
+				OwnerID: {
+					type: 'string',
+					default: '<%- cfg.OwnerID %>'
 				}
 			}
 		}
