--- a/src/partials/admin/mainCfg.ejs
+++ b/src/partials/admin/mainCfg.ejs
@@ -71,9 +71,9 @@
 			type: 'object',
 			title: 'Game server configuration',
 			properties: {
-				serverIP: {
+				ServerIP: {
 					type: 'string',
-					default: '<%- cfg.serverIP %>'
+					default: '<%- cfg.ServerIP %>'
 				},
 				ServerPort: {
 					type: 'number',
