--- a/src/partials/admin/mainCfg.ejs
+++ b/src/partials/admin/mainCfg.ejs
@@ -61,6 +61,10 @@
 				OwnerID: {
 					type: 'string',
 					default: '<%- cfg.OwnerID %>'
+				},
+				SteamGroup: {
+					type: 'string',
+					default: '<%- cfg.SteamGroup %>'
 				}
 			}
 		}
