--- a/src/partials/modules/headerLogo.ejs
+++ b/src/partials/modules/headerLogo.ejs
@@ -1,14 +1,14 @@
 <nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">
-      <img
-        src="<%= logo %>"
-        alt="Logo"
-        width="40"
-        height="40"
-        class="d-inline-block align-text-top"
-      />
-      <%= name %>
-    </a>
-  </div>
+	<div class="container-fluid">
+		<a class="navbar-brand" href="/">
+			<img
+				src="<%= cfg.Logo.img %>"
+				alt="Logo"
+				width="40"
+				height="40"
+				class="d-inline-block align-text-top"
+			/>
+			<%= cfg.Name %>
+		</a>
+	</div>
 </nav>
