--- a/src/partials/serverCard.ejs
+++ b/src/partials/serverCard.ejs
@@ -28,7 +28,7 @@
 							>
 						</p>
 						<a
-							href="steam://connect/<%= serverIP %>:<%= serverPort %>"
+							href="steam://connect/<%= cfg.ServerIP %>:<%= cfg.ServerPort %>"
 						>
 							<button
 								type="button"
