--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,4 +1,3 @@
-<!-- Footer -->
 <footer class="text-center text-lg-start text-muted">
 	<section
 		class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -32,8 +31,8 @@
 		<div class="container text-center text-md-start mt-5">
 			<div class="row mt-3">
 				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-					<h6 class="text-uppercase fw-bold mb-4"><%= name %></h6>
-					<p><%= serverDescription %></p>
+					<h6 class="text-uppercase fw-bold mb-4"><%= cfg.Name %></h6>
+					<p><%= cfg.ServerDescription %></p>
 				</div>
 
 				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -50,7 +49,7 @@
 
 	<div class="text-center">
 		<h6>
-			© Copyright 2023 <%= name %><br />
+			© Copyright 2023 <%= cfg.Name %><br />
 			Powered by
 			<a
 				style="text-decoration: none"
