--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -70,7 +70,7 @@
 							role="button"
 							aria-expanded="false"
 							title="Shop"
-							><%= balance %><%= currency %>
+							><%= balance %><%= cfg.Currency %>
 						</a>
 					</li>
 				</ul>
