--- a/src/partials/admin/head.ejs
+++ b/src/partials/admin/head.ejs
@@ -1,5 +1,5 @@
 <title>AdminPanel</title>
-<link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="<%= cfg.Logo.img %>" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/css/admin.css" />
