--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -102,7 +102,7 @@
 						Are you sure you want to logout of your account?
 					</div>
 					<div class="modal-footer">
-						<a href="/logout"
+						<a href="/auth/logout"
 							><button type="button" class="btn btn-secondary">
 								Logout
 							</button></a
