Added a test version for the constructor

--- a/src/partials/admin/header.ejs
+++ b/src/partials/admin/header.ejs
@@ -43,25 +43,16 @@
 						><i class="fa-solid fa-message fa-xl"></i
 					></a>
 				</li>
-				<!-- <li class="nav-item header-icon">
+				<li class="nav-item header-icon">
 					<a
 						class="nav-link header-icon"
 						aria-current="page"
-						href="#"
+						href="/admin/constructor"
 						style="color: black"
 						title="Page constructor"
 						><i class="fa-solid fa-puzzle-piece fa-xl"></i
 					></a>
 				</li>
-				<li class="nav-item header-icon">
-					<a
-						class="nav-link active"
-						aria-current="page"
-						href="#"
-						title="Pages"
-						><i class="fa-solid fa-file fa-xl"></i
-					></a>
-				</li> -->
 			</ul>
 			<ul
 				class="navbar-nav me-auto mb-2 mb-lg-0"
